wise-k8s-dir/wise-dir-v2-221215/wise-endpoint-service-for-admin-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiseolap-svc-v2
  namespace: hyperdata
spec:
  selector:
    app: wise-v2
  ports:
  - name: web
    port: 8888
    targetPort: 8088
  - name: web-admin1
    port: 8889
    targetPort: 9736
  - name: web-admin2
    port: 8890
    targetPort: 9736
  #sessionAffinity: ClientIP
  type: NodePort
  externalTrafficPolicy: Cluster

---
apiVersion: v1
kind: Endpoints
metadata:
  name: wiseolap-svc-v2
  namespace: hyperdata
subsets:
  - addresses:
      - ip: 100.102.254.91
    ports:
      - name: web-admin1
        port: 9736
      - name: web
        port: 8088
  - addresses:
      - ip: 100.102.53.141
    ports:
      - name: web-admin2
        port: 9736
      - name: web
        port: 8088
