wise-k8s-dir/wise-dir-v2-221215/wise-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiseolap-svc-v2
  namespace: hyperdata
spec:
  selector:
    app: wise-v2
  ports:
  - name: web
    port: 8888
    targetPort: 8088
  - name: web-admin
    port: 8889
    targetPort: 9736
  #sessionAffinity: ClientIP
  type: NodePort
  externalTrafficPolicy: Cluster
