wise-k8s-dir/wise-dir-v2-221215/wise-ingress-block-jeus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wise-ingress-block
  namespace: hyperdata
  annotations:
    #nginx.ingress.kubernetes.io/app-root: /
    #nginx.ingress.kubernetes.io/rewrite-target: /editds/$2
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/rewrite-target: $1
    #nginx.ingress.kubernetes.io/affinity: cookie
    #nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    #nginx.ingress.kubernetes.io/session-cookie-path: /editds
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  ingressClassName: hyperdata-nginx
  rules:
  #- host: hdbi22.catholic.kr
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: wiseolap-svc22
            port:
              number: 7777
  #- http:
  #    paths:
  #    - path: /()(.*)
  #      pathType: Prefix
  #      #pathType: ImplementationSpecific
  #      backend:
  #        service:
  #          name: wiseolap-svc
  #          port:
  #            number: 8888
  #tls:
  #- secretName: wisetest.wise-https-secret
